--- a/body-fat-calc/index.html
+++ b/body-fat-calc/index.html
@@ -11,6 +11,12 @@
     <div class="wrapper">
       <h3> Body Fat Calculator</h3>
       <div class="inner">
+        <p>Use the console for now!</p>
+        <p>Use functions 'maleLBW' and 'femaleLBW'</p>
+        <p>For male, 'maleLBW(body weight, waist size)'</p>
+        <p>For female, 'femaleLBW(body weight, waist, hip, forearm, wrist)'</p>
+        <p>Then use 'percentageConv(weight, lbw)'. Type in total weight, lbw should already be calculated</p>
+
       </div>
     </div>
 
