added body fat % chart

--- a/body-fat-calc/index.html
+++ b/body-fat-calc/index.html
@@ -18,6 +18,9 @@
         <p>Then use 'percentageConv(weight, lbw)'. Type in total weight, lbw should already be calculated</p>
 
       </div>
+      <div class="chart-img">
+        <img src="chart.jpg" alt="">
+      </div>
     </div>
 
 
